--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ gems: [jekyll-paginate]
 
 paginate: 20
 paginate_path: "/page-:num/"
-#google_analytics_tracking_id: ""
+google_analytics_tracking_id: "UA-20049363-3"
 github_username: "autotraderuk"
 twitter_username: "autotraderlife"
 facebook_username: "autotraderlife"
