Ensures all pages uses the AT chevron for the standard Twitter image.

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,5 @@ twitter_username: "autotraderlife"
 facebook_username: "autotraderlife"
 
 include_repo_ribbon: false
+
+twitter_card_image: /images/at-chevron_4096x4096.png
