--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,29 @@ markdown: kramdown
 kramdown:
   input: GFM
 
-gems: [jekyll-paginate]
+gems:
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-redirect-from
 
 paginate: 20
 paginate_path: "/page-:num/"
-google_analytics_tracking_id: "UA-20049363-3"
-github_username: "autotraderuk"
-twitter_username: "autotraderlife"
-facebook_username: "autotraderlife"
+google_analytics_tracking_id: UA-20049363-3
+github:
+  username: autotraderuk
+twitter:
+  username: autotraderlife
+facebook:
+  username: autotraderlife
 
 include_repo_ribbon: false
 
-twitter_card_image: /images/at-chevron_4096x4096.png
+logo: /images/at-chevron_4096x4096.png
+
+defaults:
+  - scope:
+      path: ""
+    values:
+      image: /images/at-chevron_4096x4096.png
