Style changes and comment preparation
Replicating template code from internal blog.
Make disqus comments conditional (disabled at the moment).
Add styling for tables.
Improve comments style.

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ facebook:
   username: autotraderlife
 
 include_repo_ribbon: false
+include_comments: false
 
 logo: /images/at-chevron_4096x4096.png
 
