Attempting to exclude the Gemfile and Gemfile.lock
Had a report that https://engineering.autotrader.co.uk/Gemfile%2elock
is fetchable.

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ timezone: Europe/London
 markdown: kramdown
 kramdown:
   input: GFM
+exclude:
+  - Gemfile
+  - Gemfile.lock
 
 plugins:
   - jekyll-paginate
