Enable comments globally
The comment flag is now set to true by default via the _config.yml file.

Comments can be turned off (or on) via the frontmatter at the top of each post still. I’ve removed the existing frontmatter flags simply as they are now redundant and would overwrite the default value from _config.yml. Comments can still be turned off globally using the `include_comments` flag, which works differently and will override the frontmatter configuration.

--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,14 @@ disqus_subdomain: http-engineering-autotrader-co-uk
 # start jekyll-seo-tag configuration
 logo: /assets/images/at-chevron_4096x4096.png
 defaults:
-  - scope:
-      path: ""
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
     values:
       image: /assets/images/at-chevron_4096x4096.png
+  -
+    scope:
+      path: ""
+    values:
+      comments: true
 # end jekyll-seo-tag configuration
